Small css addition to the page

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title>Hello Coursera</title>
+	<style>
+		h1{
+			font-family: monospace;
+			font-size: 12;
+		}
+	</style>
 </head>
 <body>
-<h1>Coursera</h1>
+<h1>Coursera GIT</h1>
+
 </body>
 </html>
