another small change

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Hello Coursera</title>
 	<style>
+		body{
+			display: inline-block;
+			align-items: center;
+			text-align: center;
+		}
 		h1{
 			font-family: monospace;
 			font-size: 12;
