--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
 			font-family: monospace;
 			font-size: 12;
 		}
+		.titleMain{
+			margin-left: auto;
+			margin-right:auto;
+		}
 	</style>
 </head>
 <body>
-<h1>Coursera GIT</h1>
-
+	<div class="titleMain">
+		<h1>Coursera GIT</h1>
+	</div>
 </body>
 </html>
