--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 		h1{
 			font-family: monospace;
 			font-size: 12;
+			
+			margin-left: auto;
+			margin-right: auto;
 		}
 		.titleMain{
-			margin-left: auto;
-			margin-right:auto;
+			overflow: hidden;
 		}
 	</style>
 </head>
