--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			display: inline-block;
 			align-items: center;
 			text-align: center;
+			margin 0px auto;
 		}
 		h1{
 			font-family: monospace;
@@ -16,6 +17,7 @@
 			margin-right: auto;
 		}
 		.titleMain{
+			position: sticky;
 			overflow: hidden;
 		}
 	</style>
