--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html>
 <head>
 	<title>Hello Coursera</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
+		html{
+
+          display: inline-block;
+          margin 0px auto;
+          text-align: center;
+      }
 		body{
-			display: inline-block;
+			font-family: monospace;
 			align-items: center;
-			text-align: center;
-			margin 0px auto;
 		}
 		h1{
-			font-family: monospace;
+			font-family: inherit;
 			font-size: 12;
 			color: orange;
 			margin-left: auto;
