--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		html{
-
           display: inline-block;
           margin 0px auto;
           text-align: center;
-      }
+      	}
 		body{
 			font-family: monospace;
 			align-items: center;
+			background: #071820;
+			color: white;
 		}
+
+		.titleMain{
+			position: sticky;
+			overflow: hidden;
+			width: 100%;
+		}
+
 		h1{
 			font-family: inherit;
 			font-size: 12;
 			color: orange;
-			margin-left: auto;
-			margin-right: auto;
 		}
-		.titleMain{
-			position: sticky;
-			overflow: hidden;
-		}
+		
 	</style>
 </head>
 <body>
