--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		body{
 			font-family: monospace;
 			align-items: center;
-			background: #071820;
+			background-color: #071820;
 			color: white;
 		}
 
