--- a/index.html
+++ b/index.html
@@ -1,38 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello Coursera</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<style>
-		html{
-          display: inline-block;
-          margin 0px auto;
-          text-align: center;
-      	}
-		body{
-			font-family: monospace;
-			align-items: center;
-			background-color: #071820;
-			color: white;
-		}
-
-		.titleMain{
-			position: sticky;
-			overflow: hidden;
-			width: 100%;
-		}
-
-		h1{
-			font-family: inherit;
-			font-size: 12;
-			color: orange;
-		}
-		
-	</style>
-</head>
-<body>
-	<div class="titleMain">
-		<h1>Coursera GIT</h1>
-	</div>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Coursera Demo Page</title>
+	</head>
+	<body>
+		cool coding
+	</body>
 </html>
