--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Coursera Demo Page</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		cool coding
+		<div class="main">cool coding</div>
 	</body>
 </html>
