--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width initial-scale=1">
 		<title>Coursera Demo Page</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div class="main">cool coding</div>
+		<h1>Media Quaries</h1>
+		<p id="p1"></p>
+		<p id="p2"></p>
 	</body>
 </html>
