--- a/index.html
+++ b/index.html
@@ -3,12 +3,47 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width initial-scale=1">
-		<title>Coursera Demo Page</title>
+		<title>Assignment solution for module 2</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>Media Quaries</h1>
-		<p id="p1"></p>
-		<p id="p2"></p>
+		<div id="mainTitle">
+			<h1>Our Menu</h1>
+		</div>
+		<div id="container">
+			<div class="menu_b menu_m1" >
+				<div id="menu1">
+					<h2>Chicken</h2>
+					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+				</div>
+			</div>
+			<div class="menu_b menu_m2">
+				<div id="menu2">
+					<h2>Paneer</h2>
+					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+			<div class="menu_b menu_m3">
+				<div id="menu3">
+					<h2>Sushi</h2>
+					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
