--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Our Menu</h1>
 		</div>
 		<div id="container">
-			<div class="menu_b menu_m1" >
+			<div class="menu_c menu_m1" >
 				<div id="menu1">
 					<h2>Chicken</h2>
 					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -22,7 +22,7 @@
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 				</div>
 			</div>
-			<div class="menu_b menu_m2">
+			<div class="menu_c menu_m2">
 				<div id="menu2">
 					<h2>Paneer</h2>
 					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -33,7 +33,7 @@
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
 			</div>
-			<div class="menu_b menu_m3">
+			<div class="menu_c menu_m3">
 				<div id="menu3">
 					<h2>Sushi</h2>
 					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
