--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="container">
 			<div class="menu_c menu_m1" >
 				<div id="menu1">
-					<h2>Chicken</h2>
+					<h2 class="t1">Chicken</h2>
 					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -24,7 +24,7 @@
 			</div>
 			<div class="menu_c menu_m2">
 				<div id="menu2">
-					<h2>Paneer</h2>
+					<h2 class="t2">Paneer</h2>
 					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -35,7 +35,7 @@
 			</div>
 			<div class="menu_c menu_m3">
 				<div id="menu3">
-					<h2>Sushi</h2>
+					<h2 class="t3">Sushi</h2>
 					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
